# MagiAttention

./: .clang-format  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  conftest.py  makefile  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  scm_setup.py  setup.py
.github/scripts/: install_requirements.sh
.github/workflows/: build_test.yaml  lint.yaml  sphinx.yaml  sphinx.yml
docs/: Makefile  README.md  README_zh.md  deploy_docs.md  make.bat  requirements.txt
docs/locale/: README.md
docs/main/: .buildinfo  env_variables.html  genindex.html  guide.html  index.html  install.html  magi_api.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/source/: api.md  conf.py  env_variables.md  guide.md  index.md  install.md  magi_api.md  quickstart.md  ranges.md  tutorial.md
docs/v1.0.3/: .buildinfo  env_variables.html  genindex.html  guide.html  index.html  install.html  magi_api.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
example/torch_native/: README.md  configuration_llama.py  main.py
example/transformers/: README.md  magi_trainer.py  run_origin_clm.py  run_origin_clm.sh
examples/megatron/: README.md
examples/torch_native/: README.md  configuration_llama.py  llama_pretrain_config.py  main.py  modeling_llama.py  run.sh
examples/transformers/: magi_attention_func.py  magi_trainer.py  run_magi_clm.py  run_magi_clm.sh  run_origin_clm.py  run_origin_clm.sh
exps/: README.md  __init__.py
exps/attn/: bench_bwd_loopq_loopk.py  bench_causal_partition.py  bench_inner_dir.py  bench_intra_wg_overlap.py  draw_benchmark.py  example_index_attn_viewtrick.py  merge_csv.py  ncu_bwd_profile.py  requirements.txt  run_benchmark.py  run_benchmark.sh  run_blackwell_benchmark.py  run_blackwell_benchmark.sh  run_block_sparse_bench.sh  run_block_sparse_benchmark.py  run_index_attn_block_sparse_benchmark.py  run_index_attn_comparison_benchmark.py  run_index_attn_dense_benchmark.py  run_index_attn_pack_gqa_benchmark.py  run_index_attn_sparsity_benchmark.py  run_max_logits_benchmark.py  run_packgqa_bench.py  run_packgqa_swapab_bench.py  run_sparse_load_benchmark.py  run_sparse_load_block_sparse_benchmark.py  run_sparse_load_dense_benchmark.py  run_sparse_load_pack_gqa_benchmark.py  run_swapab_benchmark.py  run_swapbwdqkloop_benchmark.py  run_swapbwdqkloop_block_sparse_benchmark.py  run_swapbwdqkloop_sparse_load_benchmark.py  run_var_block_sparse_benchmark.py
exps/device_a2av/: run.sh  test.py
exps/dist_attn/: Dockerfile.benchmark  benchmark_conf.py  build_benchmark_docker.sh  main.py  merge_draw_csv.py  requirements.txt  run_benchmark.py  run_benchmark.sh  run_profile.py  run_profile.sh
exps/grpcoll/: grpcoll_utils.py  run_grpcoll_test.sh  test_internode_grpcoll.py  test_intranode_grpcoll.py  test_low_latency_grpcoll.py
extensions/: README.md  __init__.py  fa2_interface_with_sink.py  fa3_interface_with_sink.py  requirements.txt  setup.py
extensions/magi_attn_extensions/: __init__.py  dsa_interface.py  fa2_interface_with_sink.py  fa3_interface_with_sink.py  fa4_interface_with_sink.py
extensions/tests/: dsa_ref_attn.py  test_dsa_interface.py  test_fa_interface_with_sink.py
magi_attention/: __init__.py  config.py  dist_attn_runtime_mgr.py  magi_attn_ext.pyi
magi_attention/api/: __init__.py  functools.py  magi_attn_interface.py
magi_attention/benchmarking/: __init__.py  bench.py  image_grid.py  utils.py
magi_attention/comm/: __init__.py  work.py
magi_attention/common/: __init__.py  enum.py  forward_meta.py  mask.py  protocols.py  range.py  ranges.py  rectangle.py  rectangles.py
magi_attention/csrc/extensions/: CMakeLists.txt  attn_ranges.hpp  dyn_solver_alg.cpp  kernel_barrier.cu  kernel_barrier.cuh  magi_attn_ext.cpp  magi_attn_ext.hpp  preprocess_block_sparse.cu  rectangle.hpp  rectangles.hpp  sort_and_reorder_ranges.cu  unique_consecutive_pairs.cu
magi_attention/env/: __init__.py  build.py  comm.py  ffa.py  general.py
magi_attention/functional/: __init__.py  _flex_flash_attn_jit.py  dispatch.py  dist_attn.py  fa4.py  fa4_utils.py  flex_flash_attn.py  roll.py  sdpa.py  sdpa_online.py  utils.py
magi_attention/meta/: __init__.py  _calc_attn_meta.py  _calc_dispatch_meta.py  _make_attn_meta.py  _make_dispatch_meta.py
magi_attention/testing/: __init__.py  dist_common.py  flag_generator.py  gt_dispatcher.py  precision.py  precompile.py  ref_attn.py  template.py  utils.py
magi_attention/utils/: __init__.py  _utils.py  arch.py  debug.py  dtype.py  general.py  mem_budget.py  metaclass.py  nvtx.py  sparse_utils.py  version.py
scripts/: enable_ibgda_on_host.sh  install_clang_format.sh  install_flash_attn_cute.sh  install_magiattn_on_blackwell.sh  install_on_scm.sh  install_skip_all.sh  run_csrc_code_formatter.sh  translate_po.py
tests/: README.md  README_zh.md  __init__.py  test_magi_attn_interface.py  test_pipeline.py  test_pipeline_sdpa.py
tests/test_api/: test_functools.py  test_interface.py
tests/test_attn/: sparse_test_utils.py  test_block_sparse.py  test_block_sparse_attn.py  test_dist_attn.py  test_dist_flash_attn.py  test_flex_flash_attn.py  test_index_attn.py  test_index_attn_indices_attn.py  test_index_sparse.py  test_merge_range.py  test_qblock_view_trick.py  test_ref_attn.py  test_simple_attn.py
tests/test_attn_solver/: __init__.py  test_dist_attn_solver.py  test_dynamic_attn_solver.py
tests/test_comm/: test_all_gather_v.py  test_group_collective.py  test_group_collective_utils.py  test_scatter_v.py
tests/test_common/: README.md  README_zh.md  conftest.py  test_attn_mask.py  test_attn_range.py  test_attn_ranges.py  test_meta_containers.py  test_protocol_conformance.py  test_rectangle.py  test_rectangles.py
tests/test_dispatch/: test_calc_self_attn_areas.py  test_dispatch_solver.py  test_dispatcher.py  test_gt_dispatcher.py
tests/test_dist_runtime_mgr/: test_dist_runtime_mgr.py
tests/test_functional/: __init__.py  test_dispatch.py  test_roll.py  (+1 more)
tools/: build_helper.py  ptxas_analyzer.py
(+469 files in other folders)
