[project]
name = "magi_attention"
dynamic = ["version"]
description = "A Distributed Attention Towards Linear Scalability for Ultra-Long Context, Heterogeneous Data Training"
authors = [
  {name = "littsk", email = "zeweitao@sand.ai"},
  {name = "Strivin0311", email = "yunpenghuang@sand.ai"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SandAI-org/MagiAttention/"
"Bug Tracker" = "https://github.com/SandAI-org/MagiAttention/issues"

[tool.isort]
profile = "black"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch",
    "ninja",
    "packaging"
]
build-backend = "setuptools.build_meta"

[tool.versioningit]
vcs = "git"
default-version = "1.0.3"

[tool.versioningit.write]
file = "magi_attention/_version.py"
encoding = "utf-8"
template = "__version__ = '{version}'"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["magi_attention*"]
exclude = [
    "build*",
    "tests*",
    "dist*",
    "docs*",
    "tools*",
    "assets*",
]

[tool.setuptools.package-data]
"magi_attention" = [
    # include pyi files
    "*.pyi",
    "**/*.pyi",
    # common headers and utils for runtime/JIT
    "csrc/common/*.h",
    "csrc/extensions/*.hpp",
    "csrc/extensions/*.cpp",
    "csrc/flexible_flash_attention/**/*.h",
    "csrc/flexible_flash_attention/**/*.hpp",
    "csrc/flexible_flash_attention/**/*.cuh",
    "csrc/flexible_flash_attention/**/*.cu",
    "csrc/flexible_flash_attention/**/*.cpp",
    "csrc/flexible_flash_attention/**/*.jinja",
    "csrc/flexible_flash_attention/**/*.py",
    "csrc/utils/*.cpp",
    "csrc/utils/*.cu",
    # only ship CUTLASS public headers
    "csrc/cutlass/include/**",
    # include instantiations of flexible_flash_attention
    "lib/*/*.so",
    # include ext modules besides flexible_flash_attention
    "*.so",
]
